name:                deeplink
version:             0.1.0.2
synopsis:            Automatically link C projects via macro invocations in source files
description:         For a full description, read deeplink's README.md
homepage:            https://github.com/ElastiLotem/deeplink
license:             GPL-2
license-file:        LICENSE
author:              Eyal Lotem
maintainer:          eyal.lotem@elastifile.com
-- copyright:
category:            Development
build-type:          Custom
extra-source-files:  README.md include/*.h stack.yaml
cabal-version:       >=1.10

Library
  ghc-options:         -O2 -Wall
  exposed-modules:     System.FilePath.ByteString, DeepLink
  other-modules:       OrderedSet
  default-extensions:  NoImplicitPrelude
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.9
                     , base-compat >= 0.8.2 && < 0.10
                     , bytestring >=0.10 && <0.11
                     , unix >=2.7 && <2.8
                     , elf >=0.27 && <0.28
                     , bytestring-mmap >=0.2 && <0.3
                     , containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable deeplink
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-extensions:  NoImplicitPrelude
  other-extensions:    CPP
  build-depends:       base
                     , optparse-applicative >=0.11 && <0.12
                     , process >=1.2 && <1.3
                     , base-compat
                     , bytestring
                     , deeplink
                     , unix
  default-language:    Haskell2010

executable deeplinkread
  main-is:             ReadOFile.hs
  ghc-options:         -O2 -Wall
  default-extensions:  NoImplicitPrelude
  other-extensions:    CPP
  build-depends:       base
                     , base-compat
                     , bytestring
                     , deeplink
  default-language:    Haskell2010

Test-Suite test-foo
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  main-is:             test-order.hs
  hs-source-dirs:      test
  default-extensions:  NoImplicitPrelude
  other-extensions:    OverloadedStrings, CPP
  build-depends:       base
                     , filepath >=1.4 && <1.5
                     , base-compat
                     , deeplink
                     , process
                     , bytestring
  default-language:    Haskell2010
